refactor: separate occupancy to smaller subdomains